--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.1",
     "postcss-cli": "^10.1.0",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.3",
@@ -50,6 +52,7 @@
   },
   "devDependencies": {
     "@types/react-beautiful-dnd": "^13.1.6",
+    "@types/react-modal": "^3.16.2",
     "@types/uuid": "^9.0.4"
   }
 }
